--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,18 @@
-absl-py==0.4.1
-academic==0.2.6
 alembic==1.0.8
-astor==0.7.1
-attrs==18.2.0
-auquan-toolbox==2.1.3
-backcall==0.1.0
-beautifulsoup4==4.6.3
-bibtexparser==1.0.1
-bleach==3.0.2
-bs4==0.0.1
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-cycler==0.10.0
-Cython==0.28.5
-decorator==4.3.0
-edward==1.3.5
-entrypoints==0.2.3
+certifi==2019.3.9
+Click==7.0
 Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-future==0.16.0
-gast==0.2.0
-grpcio==1.14.2
-h5py==2.8.0
-hmmlearn==0.2.0
-idna==2.7
-ipykernel==5.1.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.13.1
-jgraph==0.2.1
+itsdangerous==1.1.0
 Jinja2==2.10
-jsonschema==3.0.0a3
-jupyter-client==5.2.3
-jupyter-core==4.4.0
-kaggle==1.5.3
-Keras==2.2.2
-Keras-Applications==1.0.4
-Keras-Preprocessing==1.0.2
-kiwisolver==1.0.1
-Mako==1.0.7
-MAMEToolkit==1.0.1
-Markdown==2.6.11
-MarkupSafe==1.1.0
-matplotlib==2.2.3
-mistune==0.8.4
-mkl-fft==1.0.4
-mkl-random==1.0.1
-nb-conda==2.2.1
-nb-conda-kernels==2.2.0
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.1
--e git+https://github.com/nilmtk/nilm_metadata/@c7348dd1fdb2a7a7f9aa1f808ff5d67bf39f97c6#egg=nilm_metadata
--e git+https://github.com/nilmtk/nilmtk.git@0607e7a73bb8df0ec1ba7553077dc93e843fc5bf#egg=nilmtk
-nose==1.3.7
-notebook==5.7.0
-numexpr==2.6.8
-numpy==1.15.1
-olefile==0.45.1
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
-patsy==0.5.1
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.2.0
-plotly==2.0.0
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
-protobuf==3.6.1
-psycopg2-binary==2.7.5
-ptyprocess==0.6.0
-pycparser==2.18
-Pygments==2.2.0
-pyparsing==2.2.0
-pyrsistent==0.14.5
-python-dateutil==2.7.3
-python-dotenv==0.10.1
+Mako==1.0.8
+MarkupSafe==1.1.1
+python-dateutil==2.8.0
 python-editor==1.0.4
-python-igraph==0.7.1.post6
-python-slugify==3.0.0
-pytz==2018.5
-PyYAML==3.13
-pyzmq==17.1.2
-requests==2.19.1
-retrying==1.3.3
-scikit-learn==0.19.2
-scipy==1.1.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
-sklearn==0.0
-slacker==0.12.0
+six==1.12.0
 SQLAlchemy==1.3.1
-statsmodels==0.9.0
-tables==3.4.4
-tensorboard==1.10.0
-tensorflow==1.10.1
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.4.2
-text-unidecode==1.2
-toml==0.10.0
-torch==0.4.1
-torchfile==0.1.0
-torchvision==0.2.1
-tornado==5.1.1
-tqdm==4.31.1
-traitlets==4.3.2
-urllib3==1.23
-virtualenv==16.0.0
-visdom==0.1.8.5
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.52.0
-Werkzeug==0.14.1
+Werkzeug==0.15.1
 WTForms==2.2.1
-pyscopg2
-gunicorn
