--- a/ProcFile
+++ b/ProcFile
@@ -1,1 +1,1 @@
-web: flask db upgrade; flask translate compile; gunicorn lec-booking.app
+web: flask db upgrade; flask translate compile; gunicorn book.app
